feat: Completed Hibernate task.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-data.initial.trainers.file=classpath:data/trainers.json
-data.initial.trainees.file=classpath:data/trainees.json
-data.initial.trainings.file=classpath:data/trainings.json
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
